--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "flashquest",
+  "name": "swf-renderer",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "webpack --mode production && serve public"
+    "build": "webpack --mode production",
+    "dev": "webpack serve --mode development",
+    "start": "webpack serve --mode development --host 0.0.0.0 --port 3000",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "pako": "^2.1.0"
-  },
+  "keywords": ["swf", "flash", "webgl", "renderer", "animation"],
+  "author": "SWF Renderer Team",
+  "license": "MIT",
+  "description": "Renderizador SWF completo com WebGL",
   "devDependencies": {
-    "@types/pako": "^2.0.4",
-    "bun-types": "^1.2.21",
+    "@types/node": "^24.3.0",
+    "html-webpack-plugin": "^5.6.4",
     "ts-loader": "^9.5.4",
-    "typescript": "^5.5.3",
+    "typescript": "^5.9.2",
     "webpack": "^5.101.3",
-    "webpack-cli": "^6.0.1"
-  },
-  "private": true
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
+  }
 }
